chore: use plugin

--- a/packages/base/blockquote-base-embedded-webview/demo/base.html
+++ b/packages/base/blockquote-base-embedded-webview/demo/base.html
@@ -34,7 +34,7 @@
       <p>base.html</p>
       <simple-greeting role="timer"></simple-greeting>
     </main>
-    <script type="module">
+    <script type="module" _vite-ignore>
       import {html, css, LitElement} from './entry.js';
 
       export class SimpleGreeting extends LitElement {
