--- a/site/blockquote-base-meta/base.html
+++ b/site/blockquote-base-meta/base.html
@@ -43,8 +43,8 @@
       }
 
       p {
-        margin: 0 0 1rem 0;
-        padding: 0.5em 0.5em 1em 0.5em;
+        margin: 0 0 1rem;
+        padding: 0.5em 0.5em 1em;
         background-color: rgb(241, 241, 241);
         border: 1px solid rgb(204, 204, 204);
       }
