--- a/packages/mixins/blockquote-mixin-slot-content/demo/slots-on-the-fly.html
+++ b/packages/mixins/blockquote-mixin-slot-content/demo/slots-on-the-fly.html
@@ -98,6 +98,7 @@
             slots: {
               type: Number,
               reflect: true,
+              useDefault: true,
             },
           };
         }
