--- a/site/blockquote-mixin-slot-content/slots-on-the-fly.html
+++ b/site/blockquote-mixin-slot-content/slots-on-the-fly.html
@@ -98,6 +98,7 @@
             slots: {
               type: Number,
               reflect: true,
+              useDefault: true,
             },
           };
         }
