chore: update site [skip lerna]

--- a/site/playground-dev/index.html
+++ b/site/playground-dev/index.html
@@ -11,6 +11,7 @@
   </head>
   <body>
     <playground-ide
+      cdn-base-url="https://cdn.jsdelivr.net/npm"
       html-file="html-file.html"
       project-src="playground.json"
       line-numbers
