--- a/packages/base/ajax-provider/demo/base.html
+++ b/packages/base/ajax-provider/demo/base.html
@@ -9,7 +9,7 @@
     <style>
       html,
       body {
-        height: 100%;
+        block-size: 100%;
         margin: 0;
         font-family: sans-serif;
       }
