--- a/packages/base/blockquote-base-style-helpers/demo/shared-styles.html
+++ b/packages/base/blockquote-base-style-helpers/demo/shared-styles.html
@@ -13,8 +13,8 @@
 
       [data-embedded] .sr-only {
         position: absolute;
-        width: 1px;
-        height: 1px;
+        inline-size: 1px;
+        block-size: 1px;
         padding: 0;
         margin: -1px;
         overflow: hidden;
