--- a/packages/mixins/blockquote-mixin-slot-content/demo/composition-with-slots.html
+++ b/packages/mixins/blockquote-mixin-slot-content/demo/composition-with-slots.html
@@ -19,8 +19,8 @@
 
       [data-embedded] .sr-only {
         position: absolute;
-        width: 1px;
-        height: 1px;
+        inline-size: 1px;
+        block-size: 1px;
         padding: 0;
         margin: -1px;
         overflow: hidden;
