--- a/site/ajax-provider/dm-currecies.html
+++ b/site/ajax-provider/dm-currecies.html
@@ -24,9 +24,9 @@
       }
 
       div {
-        width: 20rem;
+        inline-size: 20rem;
         padding: 0.5rem;
-        margin-bottom: 1rem;
+        margin-block-end: 1rem;
         outline: 1px solid #d6d6d6;
       }
 
@@ -42,14 +42,14 @@
         <p class="label">getcurrencies();</p>
         <ix-object-inspector
           name="object-inspector"
-          expandLevel="3"
+          expandlevel="3"
           id="currencies"></ix-object-inspector>
       </div>
       <div>
         <p class="label">getcurrenciesFromCountryCode('MNT);</p>
         <ix-object-inspector
           name="object-inspector"
-          expandLevel="3"
+          expandlevel="3"
           id="currenciesCN"></ix-object-inspector>
       </div>
     </main>
