--- a/site/blockquote-base-style-helpers/document-styles.html
+++ b/site/blockquote-base-style-helpers/document-styles.html
@@ -13,8 +13,8 @@
 
       [data-embedded] .sr-only {
         position: absolute;
-        width: 0.0625rem;
-        height: 0.0625rem;
+        inline-size: 0.0625rem;
+        block-size: 0.0625rem;
         padding: 0;
         margin: -0.0625rem;
         overflow: hidden;
