--- a/site/blockquote-controller-context-meta/base.html
+++ b/site/blockquote-controller-context-meta/base.html
@@ -13,8 +13,8 @@
 
       [data-embedded] .sr-only {
         position: absolute;
-        width: 1px;
-        height: 1px;
+        inline-size: 1px;
+        block-size: 1px;
         padding: 0;
         margin: -1px;
         overflow: hidden;
