--- a/site/blockquote-directive-svg-to-data-image/base.html
+++ b/site/blockquote-directive-svg-to-data-image/base.html
@@ -17,8 +17,8 @@
 
       [data-embedded] .sr-only {
         position: absolute;
-        width: 1px;
-        height: 1px;
+        inline-size: 1px;
+        block-size: 1px;
         padding: 0;
         margin: -1px;
         overflow: hidden;
@@ -29,7 +29,7 @@
 
       body {
         background-color: #fff;
-        margin-top: 2rem;
+        margin-block-start: 2rem;
       }
     </style>
   </head>
