--- a/site/blockquote-mixin-slot-content/slots-on-the-fly.html
+++ b/site/blockquote-mixin-slot-content/slots-on-the-fly.html
@@ -17,8 +17,8 @@
 
       [data-embedded] .sr-only {
         position: absolute;
-        width: 1px;
-        height: 1px;
+        inline-size: 1px;
+        block-size: 1px;
         padding: 0;
         margin: -1px;
         overflow: hidden;
@@ -37,7 +37,7 @@
       .actions > * {
         display: block;
         margin: 1rem auto;
-        min-width: 34ch;
+        min-inline-size: 34ch;
       }
     </style>
   </head>
