--- a/site/blockquote-tabs/index.html
+++ b/site/blockquote-tabs/index.html
@@ -9,7 +9,7 @@
     <style>
       html,
       body {
-        height: 100%;
+        block-size: 100%;
         margin: 0;
         font-family: sans-serif;
       }
