--- a/site/index.html
+++ b/site/index.html
@@ -13,19 +13,20 @@
       }
 
       li {
-        padding-left: 0.5em;
+        padding-inline-start: 0.5em;
       }
 
       ul {
         list-style: none;
-        border-left: 1px dashed rgb(204, 204, 204);
-        margin-bottom: 1rem;
-        padding: 0.5em 0;
+        border-inline-start: 1px dashed rgb(204, 204, 204);
+        margin-block-end: 1rem;
+        padding-block: 0.5em;
+        padding-inline: 0;
         background-color: rgba(204, 204, 204, 0.2);
       }
 
       li li:first-child {
-        margin-bottom: 0.5rem;
+        margin-block-end: 0.5rem;
       }
 
       a {
@@ -45,8 +46,9 @@
       hr {
         border: none;
         background: linear-gradient(to right, transparent, hsla(0, 0%, 60%, 0.5), transparent);
-        height: 0.0625rem;
-        margin: 0 0 1rem;
+        block-size: 0.0625rem;
+        margin: 0;
+        margin-block-end: 1rem;
       }
     </style>
   </head>
@@ -62,10 +64,10 @@
     <ol>
       <li>
         <ul>
-          <li><a href="blockquote-base-meta/index.html">⇉ blockquote-base-meta</a></li>
+          <li><a href="ajax-provider/index.html">⇉ ajax-provider</a></li>
           <li>
             <a
-              href="https://github.com/oscarmarina/blockquote-web-components/tree/main/packages/base/blockquote-base-meta/README.md">
+              href="https://github.com/oscarmarina/blockquote-web-components/tree/main/packages/base/ajax-provider/README.md">
               ↬ readme
             </a>
           </li>
@@ -88,12 +90,45 @@
       </li>
       <li>
         <ul>
+          <li><a href="blockquote-base-meta/index.html">⇉ blockquote-base-meta</a></li>
+          <li>
+            <a
+              href="https://github.com/oscarmarina/blockquote-web-components/tree/main/packages/base/blockquote-base-meta/README.md">
+              ↬ readme
+            </a>
+          </li>
+        </ul>
+      </li>
+      <li>
+        <ul>
           <li>
             <a href="blockquote-base-style-helpers/index.html">⇉ blockquote-base-style-helpers</a>
           </li>
           <li>
             <a
               href="https://github.com/oscarmarina/blockquote-web-components/tree/main/packages/base/blockquote-base-style-helpers/README.md">
+              ↬ readme
+            </a>
+          </li>
+        </ul>
+      </li>
+      <li>
+        <ul>
+          <li><a href="blockquote-dialog/index.html">⇉ blockquote-dialog</a></li>
+          <li>
+            <a
+              href="https://github.com/oscarmarina/blockquote-web-components/tree/main/packages/components/blockquote-dialog/README.md">
+              ↬ readme
+            </a>
+          </li>
+        </ul>
+      </li>
+      <li>
+        <ul>
+          <li><a href="blockquote-tabs/index.html">⇉ blockquote-tabs</a></li>
+          <li>
+            <a
+              href="https://github.com/oscarmarina/blockquote-web-components/tree/main/packages/components/blockquote-tabs/README.md">
               ↬ readme
             </a>
           </li>
@@ -120,6 +155,19 @@
           <li>
             <a
               href="https://github.com/oscarmarina/blockquote-web-components/tree/main/packages/controllers/blockquote-controller-rxjs/README.md">
+              ↬ readme
+            </a>
+          </li>
+        </ul>
+      </li>
+      <li>
+        <ul>
+          <li>
+            <a href="blockquote-controller-xstate/index.html">⇉ blockquote-controller-xstate</a>
+          </li>
+          <li>
+            <a
+              href="https://github.com/oscarmarina/blockquote-web-components/tree/main/packages/controllers/blockquote-controller-xstate/README.md">
               ↬ readme
             </a>
           </li>
@@ -157,58 +205,12 @@
       </li>
       <li>
         <ul>
-          <li><a href="blockquote-dialog/index.html">⇉ blockquote-dialog</a></li>
-          <li>
-            <a
-              href="https://github.com/oscarmarina/blockquote-web-components/tree/main/packages/components/blockquote-dialog/README.md">
-              ↬ readme
-            </a>
-          </li>
-        </ul>
-      </li>
-      <li>
-        <ul>
           <li>
             <a href="blockquote-mixin-slot-content/index.html">⇉ blockquote-mixin-slot-content</a>
           </li>
           <li>
             <a
               href="https://github.com/oscarmarina/blockquote-web-components/tree/main/packages/mixins/blockquote-mixin-slot-content/README.md">
-              ↬ readme
-            </a>
-          </li>
-        </ul>
-      </li>
-      <li>
-        <ul>
-          <li><a href="blockquote-tabs/index.html">⇉ blockquote-tabs</a></li>
-          <li>
-            <a
-              href="https://github.com/oscarmarina/blockquote-web-components/tree/main/packages/components/blockquote-tabs/README.md">
-              ↬ readme
-            </a>
-          </li>
-        </ul>
-      </li>
-      <li>
-        <ul>
-          <li>
-            <a href="blockquote-controller-xstate/index.html">⇉ blockquote-controller-xstate</a>
-          </li>
-          <li>
-            <a
-              href="https://github.com/oscarmarina/blockquote-web-components/tree/main/packages/controllers/blockquote-controller-xstate/README.md">
-              ↬ readme
-            </a>
-          </li>
-        </ul>
-      </li>
-      <li>
-        <ul>
-          <li><a href="ajax-provider/index.html">⇉ ajax-provider</a></li>
-          <li>
-            <a
-              href="https://github.com/oscarmarina/blockquote-web-components/tree/main/packages/base/ajax-provider/README.md">
               ↬ readme
             </a>
           </li>
