refactor: update demos

--- a/packages/base/blockquote-base-style-helpers/demo/shared-styles.html
+++ b/packages/base/blockquote-base-style-helpers/demo/shared-styles.html
@@ -85,7 +85,8 @@
               }
 
               .shared ~ .shared {
-                margin: 1rem 0 0;
+                margin: 0;
+                margin-block-start: 1rem;
               }
             `,
             getComponentSharedStyles('shared-element-shared-styles'),
