--- a/packages/mixins/blockquote-mixin-slot-content/demo/slots-on-the-fly.html
+++ b/packages/mixins/blockquote-mixin-slot-content/demo/slots-on-the-fly.html
@@ -36,7 +36,8 @@
 
       .actions > * {
         display: block;
-        margin: 1rem auto;
+        margin-block: 1rem;
+        margin-inline: auto;
         min-inline-size: 34ch;
       }
     </style>
