--- a/packages/base/blockquote-base-meta/demo/base.html
+++ b/packages/base/blockquote-base-meta/demo/base.html
@@ -43,8 +43,9 @@
       }
 
       p {
-        margin: 0 0 1rem;
-        padding: 0.5em 0.5em 1em;
+        margin: 0;
+        margin-block-end: 1rem;
+        padding: 0.5em;
         background-color: rgb(241, 241, 241);
         border: 1px solid rgb(204, 204, 204);
       }
