--- a/packages/base/blockquote-base-style-helpers/demo/document-styles.html
+++ b/packages/base/blockquote-base-style-helpers/demo/document-styles.html
@@ -56,8 +56,10 @@
 
             pre {
               background-color: #f8f9f9;
-              padding: 0 1em;
-              margin: 0.5rem 0;
+              padding-block: 0;
+              padding-inline: 1em;
+              margin-block: 0.5rem;
+              margin-inline: 0;
               white-space: break-spaces;
               line-height: 1.06;
             }
