--- a/site/blockquote-base-style-helpers/shared-styles.html
+++ b/site/blockquote-base-style-helpers/shared-styles.html
@@ -85,7 +85,8 @@
               }
 
               .shared ~ .shared {
-                margin: 1rem 0 0;
+                margin: 0;
+                margin-block-start: 1rem;
               }
             `,
             getComponentSharedStyles('shared-element-shared-styles'),
