--- a/packages/directives/blockquote-directive-svg-to-data-image/demo/base.html
+++ b/packages/directives/blockquote-directive-svg-to-data-image/demo/base.html
@@ -2,7 +2,9 @@
 <html lang="en">
   <head>
     <title>Base - blockquote-directive-svg-to-data-image</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, interactive-widget=resizes-content" />
     <meta charset="utf-8" />
     <link rel="icon" href="favicon.svg" sizes="any" type="image/svg+xml" />
     <meta name="description" content="Demo Base - blockquote-directive-svg-to-data-image" />
