--- a/packages/directives/blockquote-directive-ariaidref-slot/index.html
+++ b/packages/directives/blockquote-directive-ariaidref-slot/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta
       name="viewport"
-      content="width=device-width, initial-scale=1, interactive-widget=resizes-content.0" />
+      content="width=device-width, initial-scale=1, interactive-widget=resizes-content" />
     <title>Redirect blockquote-directive-ariaidref-slot url=/demo/index.html"</title>
     <meta http-equiv="refresh" content="0; url=/demo/index.html" />
   </head>
