--- a/site/blockquote-controller-context-meta/base.html
+++ b/site/blockquote-controller-context-meta/base.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="favicon.svg" sizes="any" type="image/svg+xml" />
     <meta
       name="viewport"
-      content="width=device-width, initial-scale=1, interactive-widget=resizes-content.0" />
+      content="width=device-width, initial-scale=1, interactive-widget=resizes-content" />
     <meta name="description" content="Demo Base - blockquote-controller-context-meta" />
     <title>Base - blockquote-controller-context-meta</title>
     <style>
