chore: fix demo [skip lerna]

--- a/packages/controllers/blockquote-controller-context-meta/demo/directive.html
+++ b/packages/controllers/blockquote-controller-context-meta/demo/directive.html
@@ -42,7 +42,7 @@
         <consumer-el></consumer-el>
       </provider-el>
     </main>
-    <script type="module" src="../entry.js"></script>
+    <script type="module" src="./entry.js"></script>
     <button id="button">Change data</button>
     <script>
       function generateRandomText() {
