--- a/packages/controllers/blockquote-controller-context-meta/demo/index.html
+++ b/packages/controllers/blockquote-controller-context-meta/demo/index.html
@@ -22,7 +22,7 @@
       screen-size-selected="5"
       heading="blockquote-controller-context-meta">
       <template data-src="./base.html" data-option="Base"></template>
-      <template data-src="./directive/base.html" data-option="Directive"></template>
+      <template data-src="./directive.html" data-option="Directive"></template>
     </blockquote-base-embedded-webview>
 
     <script type="module" src="./entry.js"></script>
