--- a/packages/directives/blockquote-directive-svg-to-data-image/demo/simple.html
+++ b/packages/directives/blockquote-directive-svg-to-data-image/demo/simple.html
@@ -17,10 +17,8 @@
         position: absolute;
         inline-size: 1px;
         block-size: 1px;
-        padding: 0;
-        margin: -1px;
         overflow: hidden;
-        clip: rect(0, 0, 0, 0);
+        clip-path: inset(50%);
         white-space: nowrap;
         border: 0;
       }
@@ -72,12 +70,10 @@
 
             .sr-only {
               position: absolute;
-              width: 1px;
-              height: 1px;
-              padding: 0;
-              margin: -1px;
+              inline-size: 1px;
+              block-size: 1px;
               overflow: hidden;
-              clip: rect(0, 0, 0, 0);
+              clip-path: inset(50%);
               white-space: nowrap;
               border: 0;
             }
