--- a/site/blockquote-base-style-helpers/document-styles.html
+++ b/site/blockquote-base-style-helpers/document-styles.html
@@ -15,12 +15,10 @@
 
       [data-embedded] .sr-only {
         position: absolute;
-        inline-size: 0.0625rem;
-        block-size: 0.0625rem;
-        padding: 0;
-        margin: -0.0625rem;
+        inline-size: 1px;
+        block-size: 1px;
         overflow: hidden;
-        clip: rect(0, 0, 0, 0);
+        clip-path: inset(50%);
         white-space: nowrap;
         border: 0;
       }
