fix(blockquote-controller-context-meta): poor performance with tree of providers and consumers using same context

--- a/packages/controllers/blockquote-controller-context-meta/demo/directive.html
+++ b/packages/controllers/blockquote-controller-context-meta/demo/directive.html
@@ -31,6 +31,10 @@
         display: inline-block;
         margin-block-start: 1rem;
       }
+
+      consumer-el {
+        background-color: #f2f2f2;
+      }
     </style>
   </head>
   <body>
