--- a/site/blockquote-controller-context-meta/directive.html
+++ b/site/blockquote-controller-context-meta/directive.html
@@ -31,6 +31,10 @@
         display: inline-block;
         margin-block-start: 1rem;
       }
+
+      consumer-el {
+        background-color: #f2f2f2;
+      }
     </style>
   </head>
   <body>
